make sentiment tooltip longer to prevent news title from truncating

--- a/css/style.css
+++ b/css/style.css
@@ -832,7 +832,7 @@ body {
 ------------------------------------------------------------ */
 #sentiment-tooltip {
   position: absolute;
-  width: 300px;
+  width: 350px;
   font-size: 11px;
   padding: 15px;
 }
@@ -870,7 +870,7 @@ body {
 #sentiment-tooltip .wrapper {
   background-color: #454545;
   padding: 2px;
-  width: 268px;
+  width: 318px;
   height: 100%;
 }
 
@@ -931,7 +931,7 @@ body {
   background-color: #2a2a2a;
   color: rgb(107, 107, 107);
   padding: 5px 3px 5px 3px;
-  width: 268px;
+  width: 318px;
 }
 #sentiment-tooltip .tooltip-date div {
   float: right;
@@ -942,7 +942,7 @@ body {
 
 #sentiment-tooltip .news-bubble {
   position: absolute;
-  width: 200px;
+  width: 250px;
   height: 60px;
   pointer-events: none;
 }
